[package]
name = "acme-v2"
description = "Library for requesting certificates from an ACME V2 provider."
license = "MIT"
repository = "https://github.com/luizfonseca/acme-v2"
readme = "README.md"
version = "0.9.3"
authors = [
  "Luiz Fonseca <toaster.chicory-0b@icloud.com>",
  "Martin Algesten <martin@algesten.se>",
]
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]
edition = "2018"

[dependencies]
base64 = "0.22.1"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
ureq = "2"

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
rouille = "3.6"
